changed all images to next/image + changed privacy policy

--- a/app/src/app/i18n/locales/fr/translation.json
+++ b/app/src/app/i18n/locales/fr/translation.json
@@ -55,5 +55,5 @@
   "Validate": "Valider",
   "FriendsWith": "Ami(e) avec ",
   "AndManyOthers": " et {{number}} autres",
-  "UnLockMoreBeReal": "Postes à l'heure pour débloquer plus de BeReals"
+  "UnLockMoreBeReal": "Débloque plus de BeReal en postant à l'heure"
 }
