added comment ability + improved translation

--- a/app/src/app/i18n/locales/en/translation.json
+++ b/app/src/app/i18n/locales/en/translation.json
@@ -1,8 +1,8 @@
 {
   "lng": "en",
-  "Friends": "Friends",
+  "Friends": "Friends of Friends",
   "FOF": "Friends of friends",
-  "UnavailableYet": "This option is not available at the moment",
+  "UnavailableYet": "Option not available yet",
   "PostOptions": "Post Options",
   "CopyLinkSuccess": "Link copied successfully",
   "CopyLinkError": "Error copying link",
@@ -10,24 +10,25 @@
   "DownloadSecondaryImage": "Download secondary image",
   "DownloadCombinedImages": "Download combined image",
   "DownloadBTSVideo": "Download BTS video",
+  "DownloadFailed": "Download failed. Please try again later.",
   "CopyMainImageLink": "Copy main image link",
   "CopySecondaryImageLink": "Copy secondary image link",
   "TimeLate": "{{time}} late",
   "AddCommentEmpty": "Add a comment...",
   "OneComment": "View comment",
-  "MultipleComments": "View all {{number}} comments",
-  "Close": "Fermer",
-  "FriendBerealTitle": "BeReal de {{name}}",
-  "OneRetake": "1 reprise",
-  "Retakes": "{{number}} reprises",
-  "OpenInMaps": "ouvrir dans maps",
+  "MultipleComments": "View {{number}} comments",
+  "Close": "Close",
+  "FriendBerealTitle": "{{name}}'s BeReal",
+  "OneRetake": "1 retake",
+  "Retakes": "{{number}} retakes",
+  "OpenInMaps": "Open in maps",
   "ServerErrorTitle": "500 - Server error",
-  "ServerErrorP1": "Looks like something went wrong on the server side.",
-  "ServerErrorP2": "This usually means that your token has expired, and it couldn't be refreshed.",
-  "ServerErrorP3": "Try reloading this tab, or if that doesn't work, logging out and logging back in.",
+  "ServerErrorP1": "It seems that an error occurred on the server side.",
+  "ServerErrorP2": "This usually means your token expired and couldn't be refreshed.",
+  "ServerErrorP3": "Try refreshing the page, or if that doesn't work, try returning to the feed. If the error persists, please log out and then log back in.",
   "Logout": "Logout",
   "Profile": "Profile",
-  "LogoutConfirm": "Are you sure you want to disconnect ?",
+  "LogoutConfirm": "Are you sure you want to logout ?",
   "ChangeRealMojis": "Change RealMojis",
   "Memories": "Memories",
   "ActiveSince": "Active since {{date}}",
@@ -39,26 +40,34 @@
   "Minutes": "minute",
   "Seconds": "seconde",
   "Plural": "s",
-  "Pins": "Pins :",
+  "Pins": "Pins:",
   "CommonFriends": "{{number}} common friends",
   "LoginSuccess": "OTP sent with success!",
   "LoginError": "Error sending OTP. Please try again later.",
   "Subtitle": "View your friends' BeReal without posting one.",
-  "PhoneNumber": "Login with your phone number",
-  "Next": "Send verification code",
+  "PhoneNumber": "Phone Number:",
+  "Next": "Next",
   "Affiliation": "This site is in no way affiliated with BeReal SAS.",
   "PrivacyPolicy1": "By continuing to accept our ",
-  "PrivacyPolicy2": "Privacy Policy",
-  "OTPSuccess": "OTP verified with success!",
+  "PrivacyPolicy2": "Terms of Use",
+  "OTPSuccess": "OTP validated successfully!",
   "OTPError": "Error verifying OTP",
-  "VerifyPhoneNumber": "Verify your number",
+  "VerifyPhoneNumber": "Verify your phone number",
   "PhoneNumberSentTo": "Verification code sent to ",
-  "Validate": "Verify Code",
+  "Validate": "Validate",
   "FriendsWith": "Friends with ",
   "AndManyOthers": " and {{number}} more",
-  "UnlockMoreBeReal": "Post on time to unlock more BeReal's",
+  "UnlockMoreBeReal": "Unlock more BeReal by posting on time",
+  "PostMore": "Post more tomorrow. ",
   "YesterdayAt": "Yesterday at {{timestring}}",
   "RemainingPosts": "{{number}} left",
   "ReactError": "Error adding reaction",
-  "UndefinedRealMoji": "Error emoji is not defined"
+  "UndefinedRealMoji": "Error emoji is not defined",
+  "NoCommentYet": "No comments yet...",
+  "NoRealMojiYet": "No RealMojis yet...",
+  "FirstReaction": "Be the first to react to {{name}}'s post.",
+  "Reply": "Reply",
+  "CalmHere": "Wow, it's really calm in here!",
+  "CalmHere2": "Be the first to react with a RealMoji or to comment!",
+  "CommentError": "There was an error while trying to post your comment. Please try again later."
 }
