--- a/app/src/app/i18n/locales/fr/translation.json
+++ b/app/src/app/i18n/locales/fr/translation.json
@@ -27,7 +27,7 @@
   "ServerErrorP3": "Essayez de recharger la page, ou si cela ne fonctionne pas, déconnectez-vous puis reconnectez-vous.",
   "Logout": "Déconnexion",
   "Profile": "Profil",
-  "LogoutConfirm": "Êtes-vous sûr de vouloir vous déconnecter ?",
+  "LogoutConfirm": "Êtes-vous sûr de vouloir vous déconnecter?",
   "ChangeRealMojis": "Changer les RealMojis",
   "Memories": "Memories",
   "ActiveSince": "Actif depuis le {{date}}",
@@ -39,12 +39,12 @@
   "Minutes": "minute",
   "Seconds": "seconde",
   "Plural": "s",
-  "Pins": "Pins :",
+  "Pins": "Pins:",
   "CommonFriends": "{{number}} amis en commun",
   "LoginSuccess": "OTP envoyé avec succès!",
   "LoginError": "Erreur lors de l'envoie de l'OTP. Veuillez reesayer plus tard.",
   "Subtitle": "Affichez les BeReals de vos amis sans en publier un.",
-  "PhoneNumber": "Numéro de téléphone :",
+  "PhoneNumber": "Numéro de téléphone:",
   "Next": "Suivant",
   "Affiliation": "Ce site n'est en aucun cas affilié à BeReal SAS.",
   "PrivacyPolicy1": "En continuant vous acceptez nos ",
@@ -60,5 +60,14 @@
   "YesterdayAt": "Hier à {{timestring}}",
   "RemainingPosts": "{{number}} de plus",
   "ReactError": "Erreur lors de l'ajout de la réaction",
-  "UndefinedRealMoji": "Erreur emoji inexistant"
+  "UndefinedRealMoji": "Erreur emoji inexistant",
+  "CalmHere": "Oh, c'est vraiment calme ici !",
+  "CalmHere2": "Sois le premier à réagir avec un RealMoji ou un commentaire !",
+  "AddComment": "Ajouter un commentaire...",
+  "ErrorLoadingProfile": "Erreur lors du chargement du profil.",
+  "CommentError": "Une erreur s'est produite lors de la tentative de publication de votre commentaire. Veuillez réessayer plus tard.",
+  "NoCommentYet": "Aucun commentaire actuellement...",
+  "NoRealMojiYet": "Aucun RealMoji actuellement...",
+  "FirstReaction": "Sois le premier à commenter sur le post de {{name}}.",
+  "Reply": "Répondre"
 }
