added userpost page and changed signatures

--- a/app/src/app/i18n/locales/en/translation.json
+++ b/app/src/app/i18n/locales/en/translation.json
@@ -76,5 +76,6 @@
   "CopyUser": "Copy my data",
   "ClickToChange": "Click to change",
   "FOFVisible": "Show to friends of friends",
-  "PostLate": "Post late"
+  "PostLate": "Post late",
+  "MyBeReal": "My BeReal."
 }
