--- a/app/src/app/i18n/locales/fr/translation.json
+++ b/app/src/app/i18n/locales/fr/translation.json
@@ -76,5 +76,6 @@
   "CopyUser": "Copier mes données",
   "ClickToChange": "Click pour changer",
   "FOFVisible": "Montrer aux amis d'amis",
-  "PostLate": "Poster en late"
+  "PostLate": "Poster en late",
+  "MyBeReal": "Mon BeReal."
 }
