added posting on time at any time

--- a/app/src/app/i18n/locales/en/translation.json
+++ b/app/src/app/i18n/locales/en/translation.json
@@ -75,7 +75,7 @@
   "CopyToken": "Copy token",
   "CopyUser": "Copy my data",
   "ClickToChange": "Click to change",
-  "FOFVisible": "Show to friends of friends",
+  "FOFVisible": "Friends of friends",
   "PostLate": "Post late",
   "MyBeReal": "My BeReal."
 }
