--- a/app/src/app/i18n/locales/fr/translation.json
+++ b/app/src/app/i18n/locales/fr/translation.json
@@ -75,7 +75,7 @@
   "CopyToken": "Copier le token",
   "CopyUser": "Copier mes données",
   "ClickToChange": "Click pour changer",
-  "FOFVisible": "Montrer aux amis d'amis",
+  "FOFVisible": "Amis d'amis",
   "PostLate": "Poster en late",
   "MyBeReal": "Mon BeReal."
 }
