added hide/show secondary image

--- a/app/src/app/i18n/locales/en/translation.json
+++ b/app/src/app/i18n/locales/en/translation.json
@@ -77,5 +77,6 @@
   "ClickToChange": "Click to change",
   "FOFVisible": "Friends of friends",
   "PostLate": "Post late",
-  "MyBeReal": "My BeReal."
+  "MyBeReal": "My BeReal.",
+  "HideSecondaryImage": "Hide/Show secondary image"
 }
