--- a/app/src/app/i18n/locales/fr/translation.json
+++ b/app/src/app/i18n/locales/fr/translation.json
@@ -77,5 +77,6 @@
   "ClickToChange": "Click pour changer",
   "FOFVisible": "Amis d'amis",
   "PostLate": "Poster en late",
-  "MyBeReal": "Mon BeReal."
+  "MyBeReal": "Mon BeReal.",
+  "HideSecondaryImage": "Cacher/Montrer l'image secondaire"
 }
